# exec-kill-loop

./: .gitignore  README.md  exec-kill-loop.hs
sample/stencil/: run.hs
sample/stencil/stack-stencil/: .gitignore  ChangeLog.md  README.md  run.hs  stack-stencil.cabal
sample/stencil/stack-stencil/app/: stencil.hs
sample/stencil/stack-stencil/src/: Average.hs  Sobel.hs
